--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+<!--
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscapse/3.9.4/cytoscape.min.js"></script>
+  -->
+    <style>
+      #cy {
+        width: 300px;
+        height: 250px;
+        display: block;
+        background-color: #fff;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <div id="cy"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -42,5 +55,33 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+    <script>
+      /*
+      let cy = cytoscape({
+        container: document.getElementById('cy'),
+
+        elements: [
+
+        ],
+
+        style: [{
+          selector: 'node',
+          style: {
+            'background-color' : '#69e',
+            'label': 'data(id)',
+          }
+        },{
+          selector: 'edge',
+          style: {
+            'width' : 1,
+            'line-color': '#369',
+            'color': '#777'
+          }
+        }]
+      })
+      */
+    </script>
   </body>
 </html>
