--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
 
+    <!-- :TODO- all the css is getting pulled from semanti-ui file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
 
     <link rel="apple-touch-icon" href="logo192.png" />
@@ -27,6 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+<!-- :TODO- cytoscapse will be used to make graphics available for this app -->
 <!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscapse/3.9.4/cytoscape.min.js"></script>
   -->
